test/corpus/lambda.txt
================================================================================
lambda_simple
================================================================================
a = |x| x
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (variable_expr
          (identifier))))))

================================================================================
lambda_multiple_args
================================================================================
add = |a, b| a + b
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier))
          (identifier_pattern
            (identifier)))
        (bin_op_expr
          part: (variable_expr
            (identifier))
          part: (operator)
          part: (variable_expr
            (identifier)))))))

================================================================================
lambda_with_block
================================================================================
foo = |x| {
    y = x + 1
    y
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (body_expression
          (value_declaration
            (decl_left
              (identifier_pattern
                (identifier)))
            body: (expr_body
              (bin_op_expr
                part: (variable_expr
                  (identifier))
                part: (operator)
                part: (const
                  (int)))))
          (variable_expr
            (identifier)))))))

================================================================================
lambda_no_args
================================================================================
thunk = || 42
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (const
          (int))))))

================================================================================
lambda_effectful
================================================================================
main! = || {
    print!("hello")
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (body_expression
          (function_call_pnc_expr
            caller: (variable_expr
              (identifier))
            args: (const
              (string))))))))

================================================================================
lambda_with_pattern
================================================================================
getX = |{x, y}| x
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (argument_patterns
          (record_pattern
            (record_field_pattern
              (field_name))
            (record_field_pattern
              (field_name))))
        (variable_expr
          (identifier))))))

================================================================================
lambda_nested
================================================================================
curry = |a| |b| a + b
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    body: (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier)))
        (anon_fun_expr
          (argument_patterns
            (identifier_pattern
              (identifier)))
          (bin_op_expr
            part: (variable_expr
              (identifier))
            part: (operator)
            part: (variable_expr
              (identifier))))))))
